Fix bug on success/failed cards (overflow + font-size)

--- a/src/assets/css/statistics.css
+++ b/src/assets/css/statistics.css
@@ -19,7 +19,7 @@
   opacity: 0.8;
   right: calc(var(--failed-card-width)*-1.5);
   top: 45%;
-  padding-left: var(--bs-border-radius);
+  padding-right: var(--bs-border-radius);
   background-color: white;
   border-radius: var(--bs-border-radius);
   transform: translateY(-50%);
@@ -50,32 +50,34 @@
 
 #failed-card .content,
 #success-card .content {
-  padding: 1em;
-  padding-top: 2.4em;
-  font-size: calc(0.6rem + 1vmin);
+  
+  padding-top: 45%;
+  font-size: clamp(0.8em, 2em ,2vmin);
   text-align: center;
   font-family: 'Luckiest Guy', cursive;
-  line-height: 1em;
+  line-height: 1.4em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 
 #failed-card .content>div
 #success-card .content>div {
-  padding-top: 0.5em;
+  padding-top: 0.7em;
 }
 
 #failed-card .score,
 #success-card .score {
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 #failed-card .score span,
 #success-card .score span {
-  font-size: 2rem;
+  font-size: 2em;
 }
 
 #failed-card .time span,
 #success-card .time span {
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 
 #failed-card .wpm,
@@ -85,5 +87,5 @@
 
 #failed-card .wpm span,
 #success-card .wpm span {
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
